--- a/Intranet/Views/Home/_Contact.cshtml
+++ b/Intranet/Views/Home/_Contact.cshtml
@@ -448,22 +448,38 @@
 </div>
 <div class="container-fluid my-5">
     <div class="row text-center justify-content-around">
-        <div class="col-12 col-md-3 mb-2"><h3 style="color: lightgray"><i class="fa-brands fa-instagram px-2" style="color: #d3d3d3;"></i>softhaircosmeticos</h3></div>
-        <div class="col-12 col-md-3"><h3 style="color: lightgray"><i class="fa-brands fa-instagram px-2" style="color: #d3d3d3;"></i>biosoftcosmeticos</h3></div>
-        <div class="col-12 col-md-3 mb-2"><h3 style="color: lightgray"><i class="fa-brands fa-facebook px-2" style="color: #d3d3d3;"></i>softhaircosmeticos</h3></div>
-        <div class="col-12 col-md-3 mb-5"><h3 style="color: lightgray"><i class="fa-brands fa-youtube px-2" style="color: #d3d3d3;"></i>softhairoficial</h3></div>
-        <div class="col-12 col-md-3 mb-2"><h3 style="color: lightgray"><i class="fa-brands fa-linkedin px-2" style="color: #d3d3d3;"></i>softhaircosmeticos</h3></div>
-        <div class="col-12 col-md-3 mb-5"><h3 style="color: lightgray"><i class="fa-brands fa-tiktok px-2" style="color: #d3d3d3;"></i>softhaircosmeticos</h3></div>
-        <div class="col-12 col-md-3 mb-2"><h3 style="color: lightgray"><i class="fa-brands fa-tiktok px-2" style="color: #d3d3d3;"></i>biosoftcosmeticos</h3></div>
-        <div class="col-12 col-md-3"><h3 style="color: lightgray"><i class="fa-brands fa-pinterest px-2" style="color: #d3d3d3;"></i>softhaircosmeticos</h3></div>
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-2 mb-md-5 mb-lg-2">
+            <div class="fs-4" style="color: lightgray"><i class="fa-brands fa-instagram px-2" style="color: #d3d3d3;"></i>softhaircosmeticos</div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+            <div class="fs-4" style="color: lightgray"><i class="fa-brands fa-instagram px-2" style="color: #d3d3d3;"></i>biosoftcosmeticos</div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-2">
+            <div class="fs-4" style="color: lightgray"><i class="fa-brands fa-facebook px-2" style="color: #d3d3d3;"></i>softhaircosmeticos</div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-2 mb-lg-2 mb-md-5">
+            <div class="fs-4" style="color: lightgray"><i class="fa-brands fa-youtube px-2" style="color: #d3d3d3;"></i>softhairoficial</div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-2">
+            <div class="fs-4" style="color: lightgray"><i class="fa-brands fa-linkedin px-2" style="color: #d3d3d3;"></i>softhaircosmeticos</div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-2 mb-md-5 mb-lg-2">
+            <div class="fs-4" style="color: lightgray"><i class="fa-brands fa-tiktok px-2" style="color: #d3d3d3;"></i>softhaircosmeticos</div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-lg-2 mb-md-5 mb-2">
+            <div class="fs-4" style="color: lightgray"><i class="fa-brands fa-tiktok px-2" style="color: #d3d3d3;"></i>biosoftcosmeticos</div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+            <div class="fs-4" style="color: lightgray"><i class="fa-brands fa-pinterest px-2" style="color: #d3d3d3;"></i>softhaircosmeticos</div>
+        </div>
 
 
-        <div class="col-12 col-md-4 mb-2 ">
+        <div class="col-12 col-md-5 my-2 ">
             <a href="https://loja.softhair.com.br" target="_blank" style="color: purple;" class="text-decoration-none">
                 <h3>loja.softhair.com.br</h3>
             </a>
         </div>
-        <div class="col-12 col-md-4 mb-2 ">
+        <div class="col-12 col-md-5 my-2 ">
             <a href="https://softhair.com.br/" target="_blank" style="color: purple;" class="text-decoration-none">
                 <h3>softhair.com.br</h3>
             </a>
