--- a/Intranet/Views/Home/_Home.cshtml
+++ b/Intranet/Views/Home/_Home.cshtml
@@ -162,7 +162,8 @@
     <p class="text-center mb-5">Todos os avisos ativos presentes em um só lugar</p>
 
     <div id="aniversariantesSection" class="row mt-3 mb-5 justify-content-around reveal" style="width: 100%;">
-        <div class="col-md-3 mb-3 mx-2">
+
+        <div class="col-8 col-md-3 mb-3 mx-2">
             <div class="card alert alert-warning px-0 pt-0"
                  style="height: 100%; cursor: pointer;"
                  data-bs-toggle="modal" data-bs-target="#infoModal">
@@ -175,7 +176,7 @@
             </div>
         </div>
 
-        <div class="col-md-3 mb-3 mx-2">
+        <div class="col-8 col-md-3 mb-3 mx-2">
             <div class="card alert alert-warning px-0 pt-0"
                  style="height: 100%; cursor: pointer;"
                  data-bs-toggle="modal" data-bs-target="#infoModal1">
@@ -188,7 +189,7 @@
             </div>
         </div>
 
-        <div class="col-md-3 mb-3 mx-2">
+        <div class="col-8 col-md-3 mb-3 mx-2">
             <div class="card alert alert-warning px-0 pt-0"
                  style="height: 100%; cursor: pointer;"
                  data-bs-toggle="modal" data-bs-target="#infoModal2">
@@ -200,13 +201,6 @@
                 </div>
             </div>
         </div>
-    </div>
-
-
-
-
-    <div class="container reveal">
-
     </div>
 
     <div class="row justify-content-center py-5 reveal " style="background-color: #F8F9FA; margin-left: 0; margin-right: 0;">
