--- a/Intranet/Views/Home/_Lancamentos.cshtml
+++ b/Intranet/Views/Home/_Lancamentos.cshtml
@@ -66,33 +66,33 @@
             <hr class="mx-2" style="width: 40%; height: 3px; background-color: black; border: none;">
         </div>
     </div>
-    <p class="text-center mb-5 reveal">Confira os novos Produtos da empresa</p>
+    <p class="text-center mb-5 reveal">Confira os novos Produtos da empresa!</p>
     <div class="row my-5 justify-content-around align-items-center gap-3 reveal">
 
         <div class="col-md-3 text-center shadow image-hover">
-            <img src="~/Content/Produtos/000000017794.png" class="img-fluid h-75 my-3" />
+            <img src="~/Content/Produtos/000000017814.png" class="img-fluid h-75 my-3" />
             <div class="overlay">
                 <button class="btn btn-ver-mais" data-bs-toggle="modal" data-bs-target="#infoModalProduto">Ver Mais</button>
             </div>
         </div>
         <div class="col-md-3 text-center shadow image-hover">
-            <img src="~/Content/Produtos/000000017784.png" class="img-fluid h-75 my-3" />
+            <img src="~/Content/Produtos/000000017815.png" class="img-fluid h-75 my-3" />
             <div class="overlay">
                 <button class="btn btn-ver-mais" data-bs-toggle="modal" data-bs-target="#infoModalProduto2">Ver Mais</button>
             </div>
         </div>
-        <div class="col-md-3 text-center shadow image-hover">
+        @*<div class="col-md-3 text-center shadow image-hover">
             <img src="~/Content/Produtos/000000017785.png" class="img-fluid h-75 my-3" />
             <div class="overlay">
                 <button class="btn btn-ver-mais" data-bs-toggle="modal" data-bs-target="#infoModalProduto3">Ver Mais</button>
             </div>
-        </div>
-        <div class="col-md-3 text-center shadow image-hover">
+        </div>*@
+        @*<div class="col-md-3 text-center shadow image-hover">
             <img src="~/Content/Produtos/000000017752.png" class="img-fluid h-50 my-3" />
             <div class="overlay">
                 <button class="btn btn-ver-mais" data-bs-toggle="modal" data-bs-target="#infoModalProduto4">Ver Mais</button>
             </div>
-        </div>
+        </div>*@
     </div>
 </div>
 <!-- Modais -->
@@ -108,27 +108,29 @@
                     <div class="col-lg-10 text-center">
                         <div class="modal-body">
                             <!-- Título estilizado -->
-                            <h2 class="text-uppercase fw-bold">Lisa Clareador <span style="color:burlywood;">virilhas e axilas</span></h2>
+                            <h2 class="text-uppercase fw-bold">Lisa Clareador <span style="color:deeppink;">rosa mosqueta</span></h2>
                             <p class="item-intro text-muted">Clareamento eficaz</p>
 
                             <!-- Imagem do produto -->
-                            <img class="img-fluid d-block mx-auto my-4" src="~/Content/Produtos/000000017794.png" alt="Lisa Hidratante Ameixa" style="height: 233px; width: 233px;" />
+                            <img class="img-fluid d-block mx-auto my-4" src="~/Content/Produtos/000000017814.png" alt="" style="height: 233px; width: 233px;" />
 
                             <!-- Texto descritivo -->
                             <p>
-                                Também disponível na versão bisnaga 110g, o Creme Clareador Bio Soft é indicado para axilas,
-                                virilha e regiões escurecidas pelo atrito ou uso de lâmina, como cotovelos.
-                                Seu ativo principal, extraído do Gengibre Chinês possui tripla ação clareadora,
-                                atuando na formação, síntese e transporte da melanina. Com uso contínuo, inibe gradualmente a pigmentação irregular, deixando a pele mais luminosa e uniforme.
+                                Recupere a uniformidade do tom da sua pele com o poder dos ativos clareadores mais desejados: Óleo de Rosa Mosqueta + Niacinamida.
+                                O Lisa Clareador Lumina Bio Soft foi desenvolvido especialmente para tratar áreas com hiperpigmentação como axilas, virilha, joelhos e cotovelos,
+                                suavizando marcas causadas por atrito, sol, tempo ou pequenas agressões.
+                                Com uma fórmula leve, hidratante e de rápida absorção, ele atua nos processos de produção, formação e distribuição da pigmentação da pele,
+                                promovendo um tom mais equilibrado, iluminado e com toque sedoso. Ideal para o uso diário,
+                                é o cuidado que sua pele precisa para se sentir mais confiante e radiante!
                             </p>
 
                             <!-- Assinatura -->
-                            <p class="mt-4" style="color: burlywood;">
+                            <p class="mt-4" style="color: deeppink;">
                                 Atenciosamente, Equipe de MKT e Desenvolvimento de Produtos SOFT HAIR e BIO SOFT.
                             </p>
 
                             <!-- Botão de fechar -->
-                            <button class="btn btn-custom btn-xl text-uppercase mt-3 text-white" style="background-color: burlywood" data-bs-dismiss="modal" type="button">
+                            <button class="btn btn-custom btn-xl text-uppercase mt-3 text-white" style="background-color: hotpink" data-bs-dismiss="modal" type="button">
                                 <i class="fas fa-xmark me-1"></i>
                                 Fechar
                             </button>
@@ -153,28 +155,29 @@
                     <div class="col-lg-10 text-center">
                         <div class="modal-body">
                             <!-- Título com cor temática -->
-                            <h2 class="text-uppercase fw-bold">Body Splash <span style="color:darkred;">Cereja</span></h2>
-                            <p class="item-intro text-muted">Cheiro de cereja leve na pele</p>
+                            <h2 class="text-uppercase fw-bold">Lisa Esfoliante <span style="color:indianred;">Cereja em Caldas</span></h2>
+                            <p class="item-intro text-muted">Pele limpa e saudável, 2 em 1!</p>
 
                             <!-- Imagem do produto -->
-                            <img class="img-fluid d-block mx-auto my-4" src="~/Content/Produtos/000000017784.png" alt="Lisa Hidratante Melancia" style="height: 233px; width: 233px;" />
+                            <img class="img-fluid d-block mx-auto my-4" src="~/Content/Produtos/000000017815.png" alt="" style="height: 233px; width: 233px;" />
 
                             <!-- Texto de descrição -->
                             <p>
-                                O Body Splash Pele Marcante Bio Soft é uma fragrância Floral Frutal vibrante e feminina. Suas notas de topo combinam a suculência da cereja, romã, amora,
-                                pêra e maçã, o frescor cítrico do limão e toranja, e um toque especial de pimenta rosa e yogurt. No coração, a sosticação da avelã, peônia, lírio-do-vale,
-                                gardênia, jasmim e manga traz cremosidade e elegância. A base envolvente mistura a doçura da baunilha, mel e chocolate com o aconchego do âmbar,
-                                sândalo e almíscar, criando um rastro adocicado e envolvente. Essa fragrância é perfeita para quem deseja marcar presença o dia todo!
-                                Conheça toda a Linha Lisa Esfoliantes, Hidratantes e Body Splash. Tenha uma experiência mais agradável de banho e pós banho com a linha Lisa Bio Soft.
+                                Transforme seu banho em um ritual delicioso com o novo Creme Lisa Esfoliante Cereja em Caldas Bio Soft.
+                                Uma combinação exclusiva de gel de limpeza esfoliante e esfoliante cremoso hidratante que, juntos, limpam,
+                                esfoliam e  deixam sua pele com toque macio e cheiro marcante. Ideal para quem busca uma rotina prática e sensorial,
+                                o Creme Esfoliante Cereja em Calda remove células mortas, limpa profundamente e deixa a pele com um toque macio, sedoso e deliciosamente perfumado.
+                                A fragrância marcante e sofisticada de cereja torna seu banho premium ainda mais gostoso e cheiroso!
+                                Experimente esse cuidado 2 em 1 e sinta a diferença.
                             </p>
 
                             <!-- Assinatura -->
-                            <p class="mt-4" style="color: darkred;">
+                            <p class="mt-4" style="color: indianred;">
                                 Atenciosamente, Equipe de MKT e Desenvolvimento de Produtos SOFT HAIR e BIO SOFT.
                             </p>
 
                             <!-- Botão estilizado -->
-                            <button class="btn btn-custom btn-xl text-uppercase text-white mt-3" style="background-color: darkred" data-bs-dismiss="modal" type="button">
+                            <button class="btn btn-custom btn-xl text-uppercase text-white mt-3" style="background-color: indianred" data-bs-dismiss="modal" type="button">
                                 <i class="fas fa-xmark me-1"></i>
                                 Fechar
                             </button>
