--- a/Intranet/Views/Home/_About.cshtml
+++ b/Intranet/Views/Home/_About.cshtml
@@ -55,7 +55,7 @@
         <div class="d-flex align-items-center justify-content-center my-3 reveal">
             <hr class="mx-2" style="width: 40%; height: 3px; background-color: black; border: none;">
             <span class="px-2 text-muted" style="font-size: 2rem;">
-                <i class="fa-solid fa-drumstick-bite"></i>
+                <i class="fa-solid fa-utensils"></i>
             </span>
             <hr class="mx-2" style="width: 40%; height: 3px; background-color: black; border: none;">
         </div>
@@ -125,11 +125,6 @@
                             <td>10:15 – 10:25</td>
                             <td>Alana, Lívia Carvalho</td>
                         </tr>
-                        <tr>
-                            <td>10</td>
-                            <td>10:30 – 10:40</td>
-                            <td>Mariana Ferreira</td>
-                        </tr>
                     </tbody>
                 </table>
             </div>
@@ -146,7 +141,7 @@
                 <h3><strong>Escala do Almoço</strong></h3>
                 <span>Aqui se encontram os horários de almoço dos funcionários do escritório.</span>
             </div>
-            <div class="col-10">
+            <div class="col-10 mb-5">
                 <div class="table-responsive">
                     <table class="table-bordered w-100 text-center" cellpadding="8" cellspacing="0">
                         <thead style="background-color: #CCA9DD;">
@@ -212,7 +207,7 @@
                                 <td>Lorrayne</td>
                                 <td></td>
                                 <td>Camila (MKT)</td>
-                                <td>Mariana</td>
+                                <td>Izabela (Fiscal)</td>
                                 <td></td>
                                 <td>Miguel</td>
                             </tr>
@@ -224,7 +219,7 @@
                                 <td>Dayse Xavier</td>
                                 <td></td>
                                 <td>Livia</td>
-                                <td>Izabela (Fiscal)</td>
+                                <td></td>
                                 <td></td>
                                 <td></td>
                             </tr>
