--- a/Intranet/Views/Home/_Lancamentos.cshtml
+++ b/Intranet/Views/Home/_Lancamentos.cshtml
@@ -69,13 +69,13 @@
     <p class="text-center mb-5 reveal">Confira os novos Produtos da empresa!</p>
     <div class="row my-5 justify-content-around align-items-center gap-3 reveal">
 
-        <div class="col-md-3 text-center shadow image-hover">
+        <div class="col-8 col-md-3 text-center shadow image-hover">
             <img src="~/Content/Produtos/000000017814.png" class="img-fluid h-75 my-3" />
             <div class="overlay">
                 <button class="btn btn-ver-mais" data-bs-toggle="modal" data-bs-target="#infoModalProduto">Ver Mais</button>
             </div>
         </div>
-        <div class="col-md-3 text-center shadow image-hover">
+        <div class="col-8 col-md-3 text-center shadow image-hover">
             <img src="~/Content/Produtos/000000017815.png" class="img-fluid h-75 my-3" />
             <div class="overlay">
                 <button class="btn btn-ver-mais" data-bs-toggle="modal" data-bs-target="#infoModalProduto2">Ver Mais</button>
@@ -130,7 +130,7 @@
                             </p>
 
                             <!-- Botão de fechar -->
-                            <button class="btn btn-custom btn-xl text-uppercase mt-3 text-white" style="background-color: hotpink" data-bs-dismiss="modal" type="button">
+                            <button class="btn btn-custom btn-xl text-uppercase mt-3 text-white" style="background-color: deeppink" data-bs-dismiss="modal" type="button">
                                 <i class="fas fa-xmark me-1"></i>
                                 Fechar
                             </button>
