--- a/Intranet/Views/Home/_Contact.cshtml
+++ b/Intranet/Views/Home/_Contact.cshtml
@@ -25,7 +25,7 @@
             </div>
         </div>
         <p class="text-center mb-3">Utilize a barra de pesquisa para encontrar o contato de algum colaborador da empresa. </p>
-        <div class="col-5 alert alert-danger text-center pt-1 m-0">
+        <div class="col-12 col-md-5 alert alert-danger text-center pt-1 m-0">
         <strong><i class="fa-solid fa-triangle-exclamation fs-3 px-2 pt-2 align-bottom"></i>Não repassar diretamente ligações aos Diretores!!!</strong></div>
         <div class="col-sm-12 col-md-8 mb-3" style="width: 100%; height:900px">
             <table id="myTable2" class="display text-center table-bordered">
