--- a/Intranet/Views/Shared/_Layout.cshtml
+++ b/Intranet/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
         .navbar-toggler-icon {
             filter: invert(1);
         }
+
         .montserrat-body {
             font-family: "Montserrat", sans-serif;
             font-optical-sizing: auto;
@@ -47,7 +48,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-white" href="#homeSection" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle text-white" href="#homeSection" id="navbarDropdownHome" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             HOME
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -61,16 +62,16 @@
                     <li><a href="#contactSection" class="nav-link text-white">RAMAIS</a></li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-white" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle text-white" id="navbarDropdownSistemas" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             SISTEMAS
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li class="">
+                            <li class="dropdown-item">
                                 <a href="http://192.168.0.200/sics/" class="nav-link " target="_blank" rel="noopener noreferrer">
                                     SICS
                                 </a>
                             </li>
-                            <li class="mr-auto">
+                            <li class="dropdown-item mr-auto">
                                 <a href="http://192.168.0.200/relatorios/" class="nav-link " target="_blank" rel="noopener noreferrer">
                                     RELATÓRIOS
                                 </a>
@@ -78,14 +79,15 @@
                         </ul>
                     </li>
                     <li><a href="http://192.168.0.200/sics/AgendamentoReuniao/" class="nav-link text-white">AGENDAMENTOS</a></li>
+                    <li><a href="@Url.Action("Jornal", "Home")" class="nav-link text-white">JORNAL</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div style="background-color: black; height: 86px;"></div>
-    
+    <div class="" style="background-color: black; height: 86px;"></div>
+
     @RenderBody()
-    
+
     <div class="container-fluid body-content">
 
         <div class="row">
@@ -109,7 +111,9 @@
     @*@Scripts.Render("~/bundles/bootstrap")*@
     @RenderSection("scripts", required: false)
     @*<script src="~/Scripts/bootstrap.bundle.min.js"></script>*@
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+
 
     <script>
         $(document).ready(function () {
@@ -150,8 +154,12 @@
                     if (target.length) {
                         $("html, body").animate({ scrollTop: target.offset().top - 70 }, 500);
                     }
+
+                    $(".navbar-collapse").collapse("hide");
                 }
                 // Se não for âncora, deixa o comportamento normal acontecer
+
+
             });
 
             // Mudança de cor ao rolar
