--- a/Intranet/Views/Home/_Home.cshtml
+++ b/Intranet/Views/Home/_Home.cshtml
@@ -141,7 +141,7 @@
 <div class="container-fluid p-0">
     <div class="container-fluid p-0">
         <div class="position-relative">
-            <img src="~/Content/Banner/Baner SIPATE.jpg"
+            <img src="~/Content/Banner/banner-intranet.png"
                  class="d-block img-fluid"
                  style="object-fit: cover; width: 100%;">
             @*<div class="position-absolute bottom-0 start-0 text-white p-3 mb-3 mx-3" style="z-index: 10;">
