--- a/Intranet/Views/Home/_Home.cshtml
+++ b/Intranet/Views/Home/_Home.cshtml
@@ -139,55 +139,56 @@
 
 <!-- Banner -->
 <div class="container-fluid p-0">
-    <div class="container-fluid p-0">
-        <div class="position-relative">
-            <img src="~/Content/Banner/banner-intranet.png"
-                 class="d-block img-fluid"
-                 style="object-fit: cover; width: 100%;">
-            @*<div class="position-absolute bottom-0 start-0 text-white p-3 mb-3 mx-3" style="z-index: 10;">
-                <h1 id="avisosSection" class="d-none d-lg-block">Seja Bem-vindo!</h1>
-                <a href="@Url.Action("Novidades", "Home")" class="btn btn-primary btn-lg rounded-5 py-0">Saiba mais...</a>
-            </div>*@
-        </div>
-        <!--<div id="bannerCarousel" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="~/Content/Banner/Baner SIPATE.jpg"
-                         class="d-block img-fluid"
-                         style="object-fit: cover; width: 100%;">-->
-        @*<div class="carousel-caption d-none d-lg-block text-start" style="bottom: 20px; left: 20px;">
-                <h1 id="avisosSection">Seja Bem-vindo!</h1>
-                <a href="@Url.Action("Novidades", "Home")" class="btn btn-primary btn-lg rounded-5 py-0">Saiba mais...</a>
-            </div>*@
-        <!--</div>
+    <div id="bannerCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000" data-bs-pause="false">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="~/Content/Banner/Banner institucional Soft Hair intranet.jpg"
+                     class="d-block img-fluid"
+                     style="object-fit: cover; width: 100%;">
+                @*<div class="carousel-caption d-none d-lg-block text-start" style="bottom: 20px; left: 20px;">
+                    <h1 id="avisosSection">Seja Bem-vindo!</h1>
+                    <a href="@Url.Action("Novidades", "Home")" class="btn btn-primary btn-lg rounded-5 py-0">Saiba mais...</a>
+                </div>*@
+            </div>
 
-        <div class="carousel-item">
-          <img src="~/Content/Banner/art-pictures-r1fa84ix5qhniulc.jpg"
-               class="d-block img-fluid"
-               style="object-fit: cover; width: 100%;">
-          <div class="carousel-caption d-none d-lg-block text-start" style="bottom: 20px; left: 20px;">
-            <h1>Outro Título</h1>
-            <a href="#" class="btn btn-primary btn-lg rounded-5 py-0">Saiba mais...</a>
-          </div>
+            <div class="carousel-item">
+                <img src="~/Content/Banner/Banner - intranet (Cereja).jpg"
+                     class="d-block img-fluid"
+                     style="object-fit: cover; width: 100%;">
+                <div class="carousel-caption d-none d-lg-block text-start" style="bottom: 20px; left: 20px;">
+                    <h1>Outro Título</h1>
+                    <a href="#" class="btn btn-primary btn-lg rounded-5 py-0">Saiba mais...</a>
+                </div>
+            </div>
+
+            <div class="carousel-item">
+                <img src="~/Content/Banner/Baner SIPATE.jpg"
+                     class="d-block img-fluid"
+                     style="object-fit: cover; width: 100%;">
+                <div class="carousel-caption d-none d-lg-block text-start" style="bottom: 20px; left: 20px;">
+                    <h1>Outro Título</h1>
+                    <a href="#" class="btn btn-primary btn-lg rounded-5 py-0">Saiba mais...</a>
+                </div>
+            </div>
+
         </div>
 
-        </div>-->
-        <!-- Controles -->
-        <!--<button class="carousel-control-prev" type="button" data-bs-target="#bannerCarousel" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#bannerCarousel" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Anterior</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#bannerCarousel" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Próximo</span>
-        </button>-->
-        <!-- Indicadores -->
-        <!--<div class="carousel-indicators">
+        </button>
+
+        <div class="carousel-indicators">
             <button type="button" data-bs-target="#bannerCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#bannerCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>-->
-        <!-- Adicione mais indicadores se houver mais slides -->
-        <!--</div>
-        </div>-->
+            <button type="button" data-bs-target="#bannerCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#bannerCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <!--Adicione mais indicadores se houver mais slides -->
+        </div>
+    </div>
 
         <div class="text-center mt-5">
             <span class=" py-2 px-5 fs-3 rounded-4" style="color: purple; background-color: #F8F9FA; "><strong>AVISOS</strong></span>
@@ -374,7 +375,6 @@
             </div>
         </div>
     </div>
-</div>
     <!-- Modal 1 -->
     <div class="modal fade" id="infoModal" tabindex="-1" aria-labelledby="infoModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-xl">
