--- a/Intranet/Views/Home/Novidades.cshtml
+++ b/Intranet/Views/Home/Novidades.cshtml
@@ -40,7 +40,8 @@
         </div>
     </div>
     <div class="text-center my-5">
-            Agora você pode dar uma olhada no Jornal Soft News e conferir as principais novidades no nosso meio corporativo.
+        Agora você pode dar uma olhada no Jornal Soft News e conferir as principais novidades no nosso meio corporativo.
+        <img src="~/Content/Avisos/JULHO.jpg" />
     </div>
 </div>
 
