--- a/Intranet/Views/Home/Novidades.cshtml
+++ b/Intranet/Views/Home/Novidades.cshtml
@@ -39,7 +39,7 @@
             <hr class="mx-2" style="width: 40%; height: 3px; background-color: black; border: none;">
         </div>
     </div>
-    <div class="text-center my-5">
+    <div class="text-center mb-5 mt-2">
         Agora você pode dar uma olhada no Jornal Soft News e conferir as principais novidades no nosso meio corporativo.
         <img src="~/Content/Avisos/JULHO.jpg" />
     </div>
