--- a/Intranet/Views/Shared/_Layout.cshtml
+++ b/Intranet/Views/Shared/_Layout.cshtml
@@ -79,7 +79,7 @@
                         </ul>
                     </li>
                     <li><a href="http://192.168.0.200/sics/AgendamentoReuniao/" class="nav-link text-white">AGENDAMENTOS</a></li>
-                    @*<li><a href="@Url.Action("Novidades", "Home")" class="nav-link text-white">JORNAL</a></li>*@
+                    <li><a href="@Url.Action("Novidades", "Home")" class="nav-link text-white">JORNAL</a></li>
                 </ul>
             </div>
         </div>
