--- a/Intranet/Views/Home/_Home.cshtml
+++ b/Intranet/Views/Home/_Home.cshtml
@@ -299,49 +299,51 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr><td>01/mai</td><td><strong>Feriado</strong></td></tr>
-                        <tr><td>02/mai</td><td>Paula</td></tr>
-                        <tr><td>05/mai</td><td>Pedro Ivo</td></tr>
-                        <tr><td>06/mai</td><td>Quintiliana (Tininha)</td></tr>
-                        <tr><td>07/mai</td><td>Tatiane Franco</td></tr>
-                        <tr><td>08/mai</td><td>Thiago Soares</td></tr>
-                        <tr><td>09/mai</td><td>Victor César</td></tr>
-                        <tr><td>12/mai</td><td>Adila Ribeiro</td></tr>
-                        <tr><td>13/mai</td><td>Alana</td></tr>
-                        <tr><td>14/mai</td><td>Aline Moreira</td></tr>
-                        <tr><td>15/mai</td><td>Andreza</td></tr>
-                        <tr><td>16/mai</td><td>Barbára Vitória</td></tr>
-                        <tr><td>19/mai</td><td>Berenice Longuinhos</td></tr>
-                        <tr><td>20/mai</td><td>Camila Barbosa</td></tr>
-                        <tr><td>21/mai</td><td>Crimacia Oliveira</td></tr>
-                        <tr><td>22/mai</td><td>Danielle Stefânia</td></tr>
-                        <tr><td>23/mai</td><td>Dayse Mara</td></tr>
-                        <tr><td>26/mai</td><td>Dayse Xavier</td></tr>
-                        <tr><td>27/mai</td><td>Deivid Rodrigues</td></tr>
-                        <tr><td>28/mai</td><td>Fagner Miguel</td></tr>
-                        <tr><td>29/mai</td><td>Felipe</td></tr>
-                        <tr><td>30/mai</td><td>Gerald Wagner</td></tr>
-                        <tr><td>02/jun</td><td>Isabella Freesz</td></tr>
-                        <tr><td>03/jun</td><td>Izabela Santos</td></tr>
-                        <tr><td>04/jun</td><td>Jade Dayanne</td></tr>
-                        <tr><td>05/jun</td><td>Jaqueline</td></tr>
-                        <tr><td>06/jun</td><td>João Victor</td></tr>
-                        <tr><td>09/jun</td><td>Karolina</td></tr>
-                        <tr><td>10/jun</td><td>Karoline Sonaly</td></tr>
-                        <tr><td>11/jun</td><td>Lívia Carvalho</td></tr>
-                        <tr><td>12/jun</td><td>Lorrayne Braga</td></tr>
-                        <tr><td>13/jun</td><td>Luana Alves</td></tr>
-                        <tr><td>16/jun</td><td>Luiz Caio</td></tr>
-                        <tr><td>17/jun</td><td>Luiz Guilherme</td></tr>
-                        <tr><td>18/jun</td><td>Luiz Gustavo</td></tr>
-                        <tr><td>19/jun</td><td>Feriado</td></tr>
-                        <tr><td>20/jun</td><td>Maria Eduarda</td></tr>
-                        <tr><td>23/jun</td><td>Maria Laura</td></tr>
-                        <tr><td>24/jun</td><td>Mariana Ferreira</td></tr>
-                        <tr><td>25/jun</td><td>Miguel Salles</td></tr>
-                        <tr><td>26/jun</td><td>Natã</td></tr>
-                        <tr><td>27/jun</td><td>Paula</td></tr>
-                        <tr><td>30/jun</td><td>Pedro Ivo</td></tr>
+                        <tr><td>01/jul</td><td>Quintiliana (Tininha)</td></tr>
+                        <tr><td>02/jul</td><td>Tatiane Franco</td></tr>
+                        <tr><td>03/jul</td><td>Thalyta</td></tr>
+                        <tr><td>04/jul</td><td>Thiago Soares</td></tr>
+                        <tr><td>07/jul</td><td>Victor César</td></tr>
+                        <tr><td>08/jul</td><td>Adila Ribeiro</td></tr>
+                        <tr><td>09/jul</td><td>Alana</td></tr>
+                        <tr><td>10/jul</td><td>Aline Moreira</td></tr>
+                        <tr><td>11/jul</td><td>Andreza</td></tr>
+                        <tr><td>14/jul</td><td>Berenice Longuinhos</td></tr>
+                        <tr><td>15/jul</td><td>Camila Barbosa</td></tr>
+                        <tr><td>16/jul</td><td>Crimacia Oliveira</td></tr>
+                        <tr><td>17/jul</td><td>Danielle Stefânia</td></tr>
+                        <tr><td>18/jul</td><td>Dayse Mara</td></tr>
+                        <tr><td>21/jul</td><td>Dayse Xavier</td></tr>
+                        <tr><td>22/jul</td><td>Deivid Rodrigues</td></tr>
+                        <tr><td>23/jul</td><td>Fagner Miguel</td></tr>
+                        <tr><td>24/jul</td><td>Felipe</td></tr>
+                        <tr><td>25/jul</td><td>Gerald Wagner</td></tr>
+                        <tr><td>28/jul</td><td>Izabela Amora</td></tr>
+                        <tr><td>29/jul</td><td>Jade Dayanne</td></tr>
+                        <tr><td>30/jul</td><td>Jaqueline</td></tr>
+                        <tr><td>31/jul</td><td>João Victor</td></tr>x
+                        <tr><td><strong>Agosto</strong></td><td></td></tr>
+                        <tr><td>01/ago</td><td>Karolina</td></tr>
+                        <tr><td>04/ago</td><td>Karoline Oliveira</td></tr>
+                        <tr><td>05/ago</td><td>Lívia Carvalho</td></tr>
+                        <tr><td>06/ago</td><td>Lorrayne Braga</td></tr>
+                        <tr><td>07/ago</td><td>Luiz Caio</td></tr>
+                        <tr><td>08/ago</td><td>Luiz Gustavo</td></tr>
+                        <tr><td>11/ago</td><td>Maria Laura</td></tr>
+                        <tr><td>12/ago</td><td>Mariana Ferreira</td></tr>
+                        <tr><td>13/ago</td><td>Miguel Sales</td></tr>
+                        <tr><td>14/ago</td><td>Natã</td></tr>
+                        <tr><td>15/ago</td><td><strong>Feriado</strong></td></tr>
+                        <tr><td>18/ago</td><td>Paula</td></tr>
+                        <tr><td>19/ago</td><td>Pedro Ivo</td></tr>
+                        <tr><td>20/ago</td><td>Quintiliana (Tininha)</td></tr>
+                        <tr><td>21/ago</td><td>Tatiane Franco</td></tr>
+                        <tr><td>22/ago</td><td>Thalyta</td></tr>
+                        <tr><td>25/ago</td><td>Thiago Soares</td></tr>
+                        <tr><td>26/ago</td><td>Victor César</td></tr>
+                        <tr><td>27/ago</td><td>Adila Ribeiro</td></tr>
+                        <tr><td>28/ago</td><td>Alana</td></tr>
+                        <tr><td>29/ago</td><td>Aline Moreira</td></tr>
                     </tbody>
                 </table>
             </div>
